Always unref the GiTypeInfo when generating an argument cache

We were leaking a GiTypeInfo when handling child arguments.

https://bugzilla.gnome.org/show_bug.cgi?id=703973